--- a/com/doa/shesmiss/insta/package.json
+++ b/com/doa/shesmiss/insta/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "es6-promise": "^4.1.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
