--- a/vue.js_Quick_start/nuxt/nuxttest/package.json
+++ b/vue.js_Quick_start/nuxt/nuxttest/package.json
@@ -7,8 +7,7 @@
 		"dev" : "nuxt",
 		"build" : "nuxt build",
 		"start" : "nuxt start",
-		"generate" : "nuxt generate",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"generate" : "nuxt generate"
 	},
 	"author": "",
 	"license": "ISC",
