--- a/hong-web/.gitignore
+++ b/hong-web/.gitignore
@@ -1,5 +1,9 @@
 .DS_Store
 node_modules/
+_SIGN/
+_BOARD/
+JSON/
+img/
 /dist/
 npm-debug.log*
 yarn-debug.log*
@@ -12,3 +16,5 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+*.php
+*.json
